--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="avatar">
         </div>
         <div class="name">
-            <i>邱雯腾</i>
+            <span>邱雯腾</span>
         </div>
     </div>
     <div class="contents" id="nav-content">
